--- a/9번/9.md
+++ b/9번/9.md
@@ -1,3 +1,8 @@
 ### 애니메이션 이벤트 구현하는 법을 4단계로 글로 작성해보세요.
 
 (여기에 작성)
+
+1. 애니메이션 이벤트 발생 전의 모습을 만든다.
+2. 애니메이션 이벤트 발생 후의 모습을 만든다.
+3. css 적용해 본 후 transition 적용
+4. 이벤트 등록
