--- a/1번/1.md
+++ b/1번/1.md
@@ -1,4 +1,6 @@
 ### console.log와 return의 차이가 무엇인가요?
 
 (여기에 작성)
-.
+console.log 는 콘솔에 찍히도록 하는 용도 (잘 동작하는지 확인하는 용도?)
+
+return 은 함수의 값을 반환하거나 함수를 종료시킨다.
